# Hello-JNI

./: README.md
JVM/: .gitignore
JVM/Demo/: .gitignore  build.gradle
JVM/Demo/src/main/kotlin/demo/: NativeDemo.kt  main.kt
Native/: .gitignore  CMakeLists.txt  demo.h.in  demo_library.cpp  demo_library.h
Tryout_Shared_Library/: .gitignore  CMakeLists.txt  main.cpp
Upstreams/: GitFlic.sh  GitHub.sh
